[package]
name = "opensourceapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
actix-web = { version = "4", features = ["rustls-0_21"] }
env_logger = "0.8.3"
jsonwebtoken = "7.2.0"
lettre = "0.10.4"
bcrypt = "0.15.0"
mysql_async = "0.32.2"
actix-cors = "0.6.4"
validator = "0.12.0"
validator_derive = "0.12.0"
thiserror = "1.0"
dotenv = "0.15"
http = "0.2.9"
actix-files = "0.6.2"
rustls = "0.21"
rustls-pemfile = "1"